apps/base/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName sonarr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: UMASK
              value: "007"
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
          image: linuxserver/sonarr:latest@sha256:dffc730adcb8b4f4342792fbb27fcad9c62fb8660523f2aeb082416980d7fe0c
          imagePullPolicy: IfNotPresent
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: sonarr/config
            - mountPath: /data
              name: media-volume
              subPath: jellyfin/downloads
            - mountPath: /tv
              name: media-volume
              subPath: jellyfin/media/tv
            - mountPath: /anime
              name: media-volume
              subPath: jellyfin/media/anime
      hostname: sonarr
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: media-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: /mnt/mopower/swarm-data
