apps/base/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  selector:
    app: sonarr-deployment
  ports:
  - name: http
    port: 8989
    targetPort: 8989
    protocol: TCP
