apps/base/media/sonarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: sonarr-service
          port: 8989
  tls:
    certResolver: letsencrypt
